; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_script__command_native_async.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_script__command_native_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpv_node = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @script__command_native_async to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @script__command_native_async(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.mpv_node, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @jsL_checkuint64(i32* %7, i32 1)
  store i32 %8, i32* %5, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @makenode(i8* %9, %struct.mpv_node* %6, i32* %10, i32 2)
  %12 = load i32*, i32** %3, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @jclient(i32* %13)
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @mpv_command_node_async(i32 %14, i32 %15, %struct.mpv_node* %6)
  %17 = call i32 @push_status(i32* %12, i32 %16)
  ret void
}

declare dso_local i32 @jsL_checkuint64(i32*, i32) #1

declare dso_local i32 @makenode(i8*, %struct.mpv_node*, i32*, i32) #1

declare dso_local i32 @push_status(i32*, i32) #1

declare dso_local i32 @mpv_command_node_async(i32, i32, %struct.mpv_node*) #1

declare dso_local i32 @jclient(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
